tests/NormalTests/paczka1/small_fuzzy/53276659.err
Error in line 3: A104 S143 74,7
Error in line 6: A104 A104 77,9
Error in line 9: 9LTJUDzO6 S996 29,1
Error in line 10: 3RnPW S684 122,7
